# bqwizard

./: .gitignore  LICENSE  README.md  pyproject.toml
bqwizard/: dataset.py  main.py  table.py  utils.py
src/bqwizard/: __init__.py  main.py
src/bqwizard/commands/: __init__.py  config.py  dataset.py  table.py
src/bqwizard/commands/utils/: __init__.py  config_utils.py  dataset_utils.py  table_utils.py
