[tool.poetry]
name = "bqwizard"
version = "0.1.0"
description = ""
authors = ["Rolando Franqui Nadal <rolandofranqui@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.5"
click = "^8.1.7"
google-cloud-bigquery = "^3.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
bqwizard = "bqwizard.main:app"
